--- a/client/public/index.html
+++ b/client/public/index.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
   <link rel="stylesheet" href="%PUBLIC_URL%/assets/styles/global.css">
+  <link href="/dist/output.css" rel="stylesheet">
   <title>Assignment Hub</title>
 </head>
 
